[tool.poetry]
name = "gemapi"
version = "0.1.0"
description = "Gemapi is a lightweight Gemini framework."
authors = ["Thomas Sileo <t@a4.io>"]
license = "ISC"
readme = "README.md"
repository = "https://git.sr.ht/~tsileo/gemapi"
homepage = "https://git.sr.ht/~tsileo/gemapi"

[tool.poetry.urls]
"Bug Tracker" = "https://todo.sr.ht/~tsileo/gemapi"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
cryptography = "36.0.2"
click = "^8.1.3"

[tool.poetry.scripts]
gemapi = 'gemapi.cli:main'

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^0.971"
invoke = "^1.7.1"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
black = "^22.6.0"
ignition-gemini = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "strict"
